[package]
name = "possumbot"
version = "0.1.0"
authors = ["Ada <sistercities@disroot.org>"]
edition = "2018"

[dependencies]
serenity = "0.5.13"
giphy = "0.3.0"
reqwest = "0.9.16"
dotenv = "0.14.1"
rand = "0.6"

[patch.crates-io]
openssl = { git = "https://github.com/ishitatsuyuki/rust-openssl", branch = "0.9.x" }